# Odin-AI-Trading-Companion

./: .gitignore  README.md  test_ws.py
backend/: .env.example  .gitignore  README.md  backend_api_comparison.md  backend_requirements.md  integration_walkthrough.md  main.py  missing_endpoints_request.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  analysis.py  autonomous.py  health.py  market.py  monitor.py  observer.py  portfolio.py  positions.py  sentinel.py  updates.py  websocket.py
backend/app/core/: __init__.py  database.py  market_stream.py  scheduler.py  security.py  websocket_manager.py
backend/app/models/: __init__.py  database.py  trading.py
backend/app/services/: __init__.py  alpaca_service.py  analysis_service.py  autonomous_service.py  memory_service.py  monitor_service.py  news_service.py  observer_service.py  sentinel_service.py  signal_service.py
backend/app/utils/: __init__.py  market_hours.py
backend/docs/: API_DOCUMENTATION.md  SHORTING_GUIDE.md  TECHNICAL_DEEP_DIVE.md  market_context_explained.md
backend/scripts/: DEMO_DATA_README.md  debug_alpaca_history.py  demo_history_fetch.py  demo_real_fetch.py  generate_demo_data.py  test_frontend_api_v2.py  test_news_service.py
backend/tests/: __init__.py  conftest.py  test_autopilot.py  test_buy_sell.py  test_monitor_flow.py  test_niche_stock_flow.py  test_sentinel_flow.py  verify_trade_context.py
backend/tests/api/: test_analysis.py  test_autonomous.py  test_health.py  test_positions.py
frontend/: API_DOCUMENTATION.md  (+5 more)
(+68 files in other folders)
