[project]
name = "unifiedtradingbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite==0.20.0",
    "akshare>=1.16.98",
    "alembic==1.14.0",
    "alpaca-py==0.34.0",
    "apscheduler==3.10.4",
    "asyncpg==0.30.0",
    "black>=24.0.0",
    "chromadb>=1.4.1",
    "ddgs>=9.5.5",
    "fastapi==0.115.0",
    "feedparser>=6.0.11",
    "greenlet>=3.0.0",
    "httpx==0.27.2",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.9.0",
    "pydantic-settings==2.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ruff>=0.8.0",
    "sqlalchemy==2.0.36",
    "stockstats>=0.6.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "uvicorn[standard]==0.32.0",
    "yfinance>=0.2.63",
]
